# mosesdecoder

./: .gitignore  CMakeLists.txt
cmake/: FindGooglePerftools.cmake  FindIRSTLM.cmake
contrib/other-builds/mmt/: IOWrapper.cpp  TranslationTask.cpp
contrib/other-builds/mmt/FF/: Factory.cpp
lm/builder/: CMakeLists.txt
mert/: CMakeLists.txt
moses/: BitmapContainer.cpp  CMakeLists.txt  ContextScope.h  ExportInterface.cpp  Manager.cpp  Parameter.cpp  ScoreComponentCollection.cpp  ScoreComponentCollection.h  Sentence.cpp  StaticData.cpp  StaticData.h  TargetPhrase.cpp  TranslationOptionCollection.cpp  TranslationOptionCollectionConfusionNet.cpp  TranslationTask.cpp  TranslationTask.h
moses/FF/: Factory.cpp  Factory.h  FeatureFunction.cpp  FeatureFunction.h  StatefulFeatureFunction.cpp  StatefulFeatureFunction.h  StatelessFeatureFunction.cpp  StatelessFeatureFunction.h
moses/FF/LexicalReordering/: LexicalReordering.cpp
moses/LM/: Base.cpp  Base.h  IRST.cpp  IRST.h  Implementation.cpp  Jamfile  Ken.cpp  Ken.h  Multiplexer.cpp  Multiplexer.h
moses/Syntax/S2T/: OovHandler-inl.h  OovHandler.h
moses/TranslationModel/: PhraseDictionary.cpp  PhraseDictionaryDynamicCacheBased.cpp  PhraseDictionaryTreeAdaptor.cpp
moses/TranslationModel/UG/: Makefile  check-coverage3.cc  mmsapt.cpp  ptable-lookup-corpus.cc  ptable-lookup.cc  sapt_pscore_lex1.h
moses/TranslationModel/UG/generic/file_io/: ug_stream.cpp  ug_stream.h
moses/TranslationModel/UG/mm/: Jamfile  fisheryates.cpp  fisheryates.h  mtt-build.cc  symal2mam.cc  ug_bitext.h  ug_bitext_agenda_worker.h  ug_bitext_jstats.h  ug_bitext_sampler.cc  ug_bitext_sampler.h  ug_im_tsa.h  ug_mm_bitext.h  ug_mm_tsa.h  ug_mm_ttrack.h  ug_phrasepair.h  ug_sampling_bias.cc  ug_tsa_base.h  ug_tsa_tree_iterator.h  ug_typedefs.h
moses/TranslationModel/UG/util/: test.sais.cc
moses/server/: Session.h  TranslationRequest.cpp
scripts/generic/: bleu-diff.py
